sync mute state in preference

--- a/Tweet/Localizable.strings
+++ b/Tweet/Localizable.strings
@@ -162,6 +162,7 @@
 "Language" = "Language";
 "Help" = "Help";
 "Log Out" = "Log Out";
+"Mute Videos" = "Mute Videos";
 
 // MARK: - Profile
 "Tweets" = "Tweets";
