--- a/Tweet/ja.lproj/Localizable.strings
+++ b/Tweet/ja.lproj/Localizable.strings
@@ -95,6 +95,7 @@
 // MARK: - Loading States
 "Loading tweets..." = "ツイートを読み込み中...";
 "No tweet yet" = "まだツイートがありません";
+"Timeline" = "ホーム";
 "Loading chat..." = "チャットを読み込み中...";
 "Receipt ID: %@" = "受信者ID: %@";
 "Loading..." = "読み込み中...";
