--- a/Tweet/ja.lproj/Localizable.strings
+++ b/Tweet/ja.lproj/Localizable.strings
@@ -96,6 +96,48 @@
 "Loading tweets..." = "ツイートを読み込み中...";
 "No tweet yet" = "まだツイートがありません";
 "Timeline" = "ホーム";
+
+// MARK: - Navigation Titles
+"Settings" = "設定";
+"New Tweet" = "新しいツイート";
+"Create Poll" = "投票を作成";
+"Add Location" = "場所を追加";
+"Start Chat" = "チャットを開始";
+"Reply" = "返信";
+"Tweet" = "ツイート";
+
+// MARK: - Buttons
+"Retry" = "再試行";
+"OK" = "OK";
+"Add Option" = "オプションを追加";
+"Cancel" = "キャンセル";
+"Add" = "追加";
+"Delete" = "削除";
+"Discard" = "破棄";
+"Keep Editing" = "編集を続行";
+"Publish" = "公開";
+
+// MARK: - Alerts
+"Error" = "エラー";
+"Delete Comment" = "コメントを削除";
+"Delete Chat" = "チャットを削除";
+"Discard Reply" = "返信を破棄";
+
+// MARK: - Placeholders
+"Ask a question..." = "質問を入力...";
+"Option %d" = "オプション %d";
+"Search location..." = "場所を検索...";
+"Type a message..." = "メッセージを入力...";
+
+// MARK: - UI Elements
+"Private" = "プライベート";
+"Initializing..." = "初期化中...";
+"Failed to initialize app" = "アプリの初期化に失敗しました";
+"Background upload failed." = "バックグラウンドアップロードに失敗しました。";
+"Failed to publish tweet." = "ツイートの公開に失敗しました。";
+"Failed to delete tweet." = "ツイートの削除に失敗しました。";
+"Failed to publish comment." = "コメントの公開に失敗しました。";
+"Failed to delete comment." = "コメントの削除に失敗しました。";
 "Loading chat..." = "チャットを読み込み中...";
 "Receipt ID: %@" = "受信者ID: %@";
 "Loading..." = "読み込み中...";
