--- a/Tweet/ja.lproj/Localizable.strings
+++ b/Tweet/ja.lproj/Localizable.strings
@@ -138,6 +138,10 @@
 "Failed to delete tweet." = "ツイートの削除に失敗しました。";
 "Failed to publish comment." = "コメントの公開に失敗しました。";
 "Failed to delete comment." = "コメントの削除に失敗しました。";
+
+// MARK: - Toast Messages
+"Tweet published successfully" = "ツイートが正常に公開されました";
+"Comment published successfully" = "コメントが正常に公開されました";
 "Loading chat..." = "チャットを読み込み中...";
 "Receipt ID: %@" = "受信者ID: %@";
 "Loading..." = "読み込み中...";
