--- a/Tweet/ja.lproj/Localizable.strings
+++ b/Tweet/ja.lproj/Localizable.strings
@@ -284,7 +284,7 @@
 "No results found" = "結果が見つかりません";
 "Try searching for a different username" = "別のユーザー名で検索してみてください";
 "Search for users" = "ユーザーを検索";
-"Enter a username to find users" = "ユーザーを見つけるためにユーザー名を入力";
+"Enter @username to find users" = "@ユーザー名を入力してユーザーを見つける";
 "Start Chat" = "チャットを開始";
 "%d attachments" = "%d個の添付ファイル";
 "+%d" = "+%d";
