since time date

--- a/Tweet/zh-Hans.lproj/Localizable.strings
+++ b/Tweet/zh-Hans.lproj/Localizable.strings
@@ -186,7 +186,7 @@
 "Block" = "屏蔽";
 "Mute" = "静音";
 "Follow" = "关注";
-"Unfollow" = "取消关注";
+"Unfollow" = "取关";
 "Like" = "点赞";
 "Unlike" = "取消点赞";
 "Bookmark" = "书签";
