--- a/Tweet/Localizable.strings
+++ b/Tweet/Localizable.strings
@@ -298,6 +298,15 @@
 "Failed to add bookmark" = "Failed to add bookmark";
 "Failed to remove bookmark" = "Failed to remove bookmark";
 
+// MARK: - Terms of Service
+"Terms of Service" = "Terms of Service";
+"I agree to the " = "I agree to the ";
+" and acknowledge that there is no tolerance for objectionable content or abusive users." = " and acknowledge that there is no tolerance for objectionable content or abusive users.";
+"I agree to the Terms of Service and acknowledge that there is no tolerance for objectionable content or abusive users." = "I agree to the Terms of Service and acknowledge that there is no tolerance for objectionable content or abusive users.";
+"You must accept the Terms of Service to continue." = "You must accept the Terms of Service to continue.";
+"Accept" = "Accept";
+"Cancel" = "Cancel";
+
 // MARK: - Status Messages
 "Offline - Showing cached content" = "Offline - Showing cached content";
 "Creating Account..." = "Creating Account...";
